# WebHomework_06

./: README.md  connect.py  create_tables.py  create_tables.sql  insert.py  main.py  pyproject.toml  query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  select.py
